Configure No-Op Access Granted

--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 
   <groupId>com.google.fhir.gateway</groupId>
   <artifactId>fhir-gateway</artifactId>
-  <version>0.1.39</version>
+  <version>0.1.39-lt</version>
   <packaging>pom</packaging>
 
   <name>FHIR Information Gateway</name>
