add configuration for spring application json

--- a/charts/fhir-gateway/templates/deployment.yaml
+++ b/charts/fhir-gateway/templates/deployment.yaml
@@ -57,6 +57,10 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           {{- if  .Values.env }}
           env:
+            {{- if .Values.applicationConfig }}
+            - name: SPRING_APPLICATION_JSON
+              value: {{ .Values.applicationConfig | toJson | quote }}
+            {{- end }}
             {{- tpl (toYaml .Values.env) .  | nindent 12 }}
           {{- end }}
           ports:
