--- a/charts/fhir-gateway/values.yaml
+++ b/charts/fhir-gateway/values.yaml
@@ -153,6 +153,7 @@ pdb:
   minAvailable: ""
   maxUnavailable: 1
 
+# Add the spring configuration below check https://docs.spring.io/spring-boot/docs/current/reference/html/howto.html#howto.properties-and-configuration.
 applicationConfig:
 #  server:
 #    max-http-header-size: 40KB
