--- a/exec/pom.xml
+++ b/exec/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>com.google.fhir.gateway</groupId>
     <artifactId>fhir-gateway</artifactId>
-    <version>0.1.42</version>
+    <version>0.1.41-LT</version>
   </parent>
 
   <artifactId>exec</artifactId>
